--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,16 @@
     0 0 50px #97a5ff,
     0 0 70px #97a5ff;
 }
+.neonText2 {
+  color: #ffffff;
+  box-shadow:
+    0 0 0px #fff,
+    0 0 5px #fff,
+    0 0 0px #fff,
+    0 0 0px #97a5ff,
+    0 0 20px #97a5ff,
+    0 0 5px #97a5ff,
+    0 0 50px #97a5ff,
+    0 0 70px #97a5ff;
+}
+
