--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,13 @@
   }
 }
 
+
+
+
+
+
+/* progress bar  */
+
 .progress-bar {
   position: fixed;
   top: 0;
@@ -81,6 +88,11 @@
   transform-origin: 0%;
 }
 
+
+
+
+
+/* fancy text animation  */
 
 .neonText {
   color: #ffffff;
@@ -94,7 +106,6 @@
     0 0 50px #97a5ff,
     0 0 70px #97a5ff;
 }
-
 .neonText2 {
   color: #ffffff;
   box-shadow:
@@ -107,7 +118,6 @@
     0 0 50px #97a5ff,
     0 0 70px #97a5ff;
 }
-
 .neonText2:hover {
   color: #ffffff;
   box-shadow:
@@ -121,9 +131,370 @@
     0 0 70px #6176ff;
 }
 
-.fancy-boarder{
-  border-radius: 30% 70% 70% 30% / 30% 44% 56% 70% ;
+
+
+
+/* fancy border  */
+.fancy-boarder {
+  border-radius: 30% 70% 70% 30% / 30% 44% 56% 70%;
 }
-.fancy-boarder2{
-  border-radius: 0% 100% 100% 100% / 0% 100% 0% 100%  ;
+.fancy-boarder2 {
+  border-radius: 0% 100% 100% 100% / 0% 100% 0% 100%;
+}
+
+
+
+
+
+/* glitch text  */
+
+.glitch-wrapper {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  background-color: #222;
+}
+.glitch {
+  position: relative;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #fff;
+  letter-spacing: 5px;
+  z-index: 1;
+}
+.glitch:before {
+  content: attr(data-glitch);
+  position: absolute;
+  top: 0;
+  left: -2px;
+  width: 100%;
+  color: #fff;
+  background-color: #222;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-before 3s infinite linear alternate-reverse;
+}
+.glitch:after {
+  content: attr(data-glitch);
+  position: absolute;
+  top: 0;
+  left: 2px;
+  width: 100%;
+  color: #fff;
+  background-color: #222;
+  overflow: hidden;
+  clip: rect(0, 900px, 0, 0);
+  animation: noise-after 2s infinite linear alternate-reverse;
+}
+@keyframes noise-before {
+  0% {
+    clip: rect(61px, 9999px, 52px, 0);
+  }
+
+  5% {
+    clip: rect(33px, 9999px, 144px, 0);
+  }
+
+  10% {
+    clip: rect(121px, 9999px, 115px, 0);
+  }
+
+  15% {
+    clip: rect(144px, 9999px, 162px, 0);
+  }
+
+  20% {
+    clip: rect(62px, 9999px, 180px, 0);
+  }
+
+  25% {
+    clip: rect(34px, 9999px, 42px, 0);
+  }
+
+  30% {
+    clip: rect(147px, 9999px, 179px, 0);
+  }
+
+  35% {
+    clip: rect(99px, 9999px, 63px, 0);
+  }
+
+  40% {
+    clip: rect(188px, 9999px, 122px, 0);
+  }
+
+  45% {
+    clip: rect(154px, 9999px, 14px, 0);
+  }
+
+  50% {
+    clip: rect(63px, 9999px, 37px, 0);
+  }
+
+  55% {
+    clip: rect(161px, 9999px, 147px, 0);
+  }
+
+  60% {
+    clip: rect(109px, 9999px, 175px, 0);
+  }
+
+  65% {
+    clip: rect(157px, 9999px, 88px, 0);
+  }
+
+  70% {
+    clip: rect(173px, 9999px, 131px, 0);
+  }
+
+  75% {
+    clip: rect(62px, 9999px, 70px, 0);
+  }
+
+  80% {
+    clip: rect(24px, 9999px, 153px, 0);
+  }
+
+  85% {
+    clip: rect(138px, 9999px, 40px, 0);
+  }
+
+  90% {
+    clip: rect(79px, 9999px, 136px, 0);
+  }
+
+  95% {
+    clip: rect(25px, 9999px, 34px, 0);
+  }
+
+  100% {
+    clip: rect(173px, 9999px, 166px, 0);
+  }
+}
+@keyframes noise-after {
+  0% {
+    clip: rect(26px, 9999px, 33px, 0);
+  }
+
+  5% {
+    clip: rect(140px, 9999px, 198px, 0);
+  }
+
+  10% {
+    clip: rect(184px, 9999px, 89px, 0);
+  }
+
+  15% {
+    clip: rect(121px, 9999px, 6px, 0);
+  }
+
+  20% {
+    clip: rect(181px, 9999px, 99px, 0);
+  }
+
+  25% {
+    clip: rect(154px, 9999px, 133px, 0);
+  }
+
+  30% {
+    clip: rect(134px, 9999px, 169px, 0);
+  }
+
+  35% {
+    clip: rect(26px, 9999px, 187px, 0);
+  }
+
+  40% {
+    clip: rect(147px, 9999px, 137px, 0);
+  }
+
+  45% {
+    clip: rect(31px, 9999px, 52px, 0);
+  }
+
+  50% {
+    clip: rect(191px, 9999px, 109px, 0);
+  }
+
+  55% {
+    clip: rect(74px, 9999px, 54px, 0);
+  }
+
+  60% {
+    clip: rect(145px, 9999px, 75px, 0);
+  }
+
+  65% {
+    clip: rect(153px, 9999px, 198px, 0);
+  }
+
+  70% {
+    clip: rect(99px, 9999px, 136px, 0);
+  }
+
+  75% {
+    clip: rect(118px, 9999px, 192px, 0);
+  }
+
+  80% {
+    clip: rect(1px, 9999px, 83px, 0);
+  }
+
+  85% {
+    clip: rect(145px, 9999px, 98px, 0);
+  }
+
+  90% {
+    clip: rect(121px, 9999px, 154px, 0);
+  }
+
+  95% {
+    clip: rect(156px, 9999px, 44px, 0);
+  }
+
+  100% {
+    clip: rect(67px, 9999px, 122px, 0);
+  }
+}
+
+
+
+
+
+
+
+/* glowing text  */
+:root {
+  --glow-color: #97a5ff;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+.glowing-btn {
+  position: relative;
+  color: var(--glow-color);
+  cursor: pointer;
+  padding: 0.35em 1em;
+  border: 0.15em solid var(--glow-color);
+  background: none;
+  perspective: 2em;
+  font-family: "Raleway", sans-serif;
+  font-size: 20px;
+  font-weight: 800;
+  letter-spacing: 5px;
+
+  -webkit-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  -moz-box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  box-shadow: inset 0px 0px 0.5em 0px var(--glow-color),
+    0px 0px 0.5em 0px var(--glow-color);
+  animation: border-flicker 2s linear infinite;
+}
+.glowing-btn::before {
+  
+  filter: blur(1em);
+  transform: translateY(120%) rotateX(95deg) scale(1, 0.35);
+  background: var(--glow-color);
+  pointer-events: none;
+}
+.glowing-btn::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  opacity: 0;
+  z-index: -1;
+  background-color: var(--glow-color);
+  box-shadow: 0 0 2em 0.2em var(--glow-color);
+  transition: opacity 100ms linear;
+}
+.glowing-btn:hover {
+  color: rgba(0, 0, 0, 0.8);
+  text-shadow: none;
+  animation: none;
+}
+.glowing-btn:hover .glowing-txt {
+  animation: none;
+}
+.glowing-btn:hover .faulty-letter {
+  animation: none;
+  text-shadow: none;
+  opacity: 1;
+}
+.glowing-btn:hover:before {
+  filter: blur(1.5em);
+  opacity: 1;
+}
+.glowing-btn:hover:after {
+  opacity: 1;
+}
+@keyframes border-flicker {
+  0% {
+    opacity: 0.1;
+  }
+
+  2% {
+    opacity: 1;
+  }
+
+  4% {
+    opacity: 0.1;
+  }
+
+  8% {
+    opacity: 1;
+  }
+
+  70% {
+    opacity: 0.7;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
+
+
+
+
+
+/* fancy background */
+
+.fancy-bg {
+  background-image: radial-gradient(#7c7cec 1.5px, transparent 1.5px), radial-gradient(#7c7cec 1.5px, transparent 1.5px);
+  background-size: 26px 26px;
+  background-position: 0 0, 13px 13px;
+  background-color: #001836;
+}
+
+.fancy-bg2 {
+  background:
+    radial-gradient(50% 50% at 100% 0, #002456 0% 5%, #000027 6% 15%, #002456 16% 25%, #000027 26% 35%, #002456 36% 45%,
+      #000027 46% 55%, #002456 56% 65%, #000027 66% 75%, #002456 76% 85%, #000027 86% 95%,
+      #0000 96%),
+    radial-gradient(50% 50% at 0 100%, #002456 0% 5%, #000027 6% 15%, #002456 16% 25%, #000027 26% 35%, #002456 36% 45%,
+      #000027 46% 55%, #002456 56% 65%, #000027 66% 75%, #002456 76% 85%, #000027 86% 95%,
+      #0000 96%),
+    radial-gradient(50% 50%, #002456 0% 5%, #000027 6% 15%, #002456 16% 25%, #000027 26% 35%, #002456 36% 45%,
+      #000027 46% 55%, #002456 56% 65%, #000027 66% 75%, #002456 76% 85%, #000027 86% 95%,
+      #0000 96%),
+    radial-gradient(50% 50%, #002456 0% 5%, #000027 6% 15%, #002456 16% 25%, #000027 26% 35%, #002456 36% 45%,
+      #000027 46% 55%, #002456 56% 65%, #000027 66% 75%, #002456 76% 85%, #000027 86% 95%,
+      #0000 96%) 26px 26px;
+  background-size: 52px 52px;
+  background-color: #002456;
 }
