--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,128 @@
 
 
 
+/* fancy button  */
+
+.fancy-button .wow-btn {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 155px;
+	height: 40px;
+	margin: 0;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.fancy-button .wow-btn a {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background: rgba(255, 255, 255, 0.05);
+	box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
+	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+	border-top: 1px solid rgba(255, 255, 255, 0.1);
+	border-radius: 30px;
+	padding: 10px;
+	letter-spacing: 1px;
+	text-decoration: none;
+	overflow: hidden;
+	color: #fff;
+	font-weight: 400px;
+	z-index: 1;
+	transition: 0.5s;
+	backdrop-filter: blur(15px);
+  font-size: 12px;
+}
+.fancy-button .wow-btn:hover a {
+	letter-spacing: 3px;
+}
+.fancy-button .wow-btn a::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
+	transform: skewX(45deg) translate(0);
+	transition: 0.5s;
+	filter: blur(0px);
+}
+.fancy-button .wow-btn:hover a::before {
+	transform: skewX(45deg) translate(200px);
+}
+.fancy-button .wow-btn::before {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	bottom: -5px;
+	width: 30px;
+	height: 10px;
+	background: #97a5ff;
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+.fancy-button .wow-btn:hover::before /*lightup button*/ {
+	bottom: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+
+.fancy-button .wow-btn::after {
+	content: "";
+	position: absolute;
+	left: 50%;
+	transform: translatex(-50%);
+	top: -5px;
+	width: 30px;
+	height: 10px;
+	border-radius: 10px;
+	transition: 0.5s;
+	transition-delay: 0.5;
+}
+.fancy-button .wow-btn:hover::after /*lightup button*/ {
+	top: 0;
+	height: 50%;
+	width: 80%;
+	border-radius: 30px;
+}
+.fancy-button .wow-btn:nth-child(1)::before, /*chnage 1*/
+.fancy-button .wow-btn:nth-child(1)::after {
+	background: #97a5ff;
+	box-shadow: 0 0 5px #97a5ff, 0 0 15px #97a5ff, 0 0 30px #97a5ff,
+		0 0 60px #97a5ff;
+}
+.fancy-button .wow-btn:nth-child(2)::before, /*chnage 1*/
+.fancy-button .wow-btn:nth-child(2)::after {
+	background: #97ff9e;
+	box-shadow: 0 0 5px #97ff9e, 0 0 15px #97ff9e, 0 0 30px #97ff9e,
+		0 0 60px #97ff9e;
+}
+.fancy-button .wow-btn:nth-child(3)::before, /*chnage 1*/
+.fancy-button .wow-btn:nth-child(3)::after {
+	background: #ffbb97;
+	box-shadow: 0 0 5px #ffbb97, 0 0 15px #ffbb97, 0 0 30px #ffbb97,
+		0 0 60px #ffbb97;
+}
+
+
+
+
+
+
+
+
+
+
 
 /* glowing text */
 
@@ -187,225 +309,6 @@
 
 
 
-/* glitch text  */
-
-.glitch-wrapper {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-color: #222;
-}
-
-.glitch {
-  position: relative;
-  font-size: 80px;
-  font-weight: 700;
-  line-height: 1.2;
-  color: #fff;
-  letter-spacing: 5px;
-  z-index: 1;
-}
-
-.glitch:before {
-  content: attr(data-glitch);
-  position: absolute;
-  top: 0;
-  left: -2px;
-  width: 100%;
-  color: #fff;
-  background-color: #222;
-  overflow: hidden;
-  clip: rect(0, 900px, 0, 0);
-  animation: noise-before 3s infinite linear alternate-reverse;
-}
-
-.glitch:after {
-  content: attr(data-glitch);
-  position: absolute;
-  top: 0;
-  left: 2px;
-  width: 100%;
-  color: #fff;
-  background-color: #222;
-  overflow: hidden;
-  clip: rect(0, 900px, 0, 0);
-  animation: noise-after 2s infinite linear alternate-reverse;
-}
-
-@keyframes noise-before {
-  0% {
-    clip: rect(61px, 9999px, 52px, 0);
-  }
-
-  5% {
-    clip: rect(33px, 9999px, 144px, 0);
-  }
-
-  10% {
-    clip: rect(121px, 9999px, 115px, 0);
-  }
-
-  15% {
-    clip: rect(144px, 9999px, 162px, 0);
-  }
-
-  20% {
-    clip: rect(62px, 9999px, 180px, 0);
-  }
-
-  25% {
-    clip: rect(34px, 9999px, 42px, 0);
-  }
-
-  30% {
-    clip: rect(147px, 9999px, 179px, 0);
-  }
-
-  35% {
-    clip: rect(99px, 9999px, 63px, 0);
-  }
-
-  40% {
-    clip: rect(188px, 9999px, 122px, 0);
-  }
-
-  45% {
-    clip: rect(154px, 9999px, 14px, 0);
-  }
-
-  50% {
-    clip: rect(63px, 9999px, 37px, 0);
-  }
-
-  55% {
-    clip: rect(161px, 9999px, 147px, 0);
-  }
-
-  60% {
-    clip: rect(109px, 9999px, 175px, 0);
-  }
-
-  65% {
-    clip: rect(157px, 9999px, 88px, 0);
-  }
-
-  70% {
-    clip: rect(173px, 9999px, 131px, 0);
-  }
-
-  75% {
-    clip: rect(62px, 9999px, 70px, 0);
-  }
-
-  80% {
-    clip: rect(24px, 9999px, 153px, 0);
-  }
-
-  85% {
-    clip: rect(138px, 9999px, 40px, 0);
-  }
-
-  90% {
-    clip: rect(79px, 9999px, 136px, 0);
-  }
-
-  95% {
-    clip: rect(25px, 9999px, 34px, 0);
-  }
-
-  100% {
-    clip: rect(173px, 9999px, 166px, 0);
-  }
-}
-
-@keyframes noise-after {
-  0% {
-    clip: rect(26px, 9999px, 33px, 0);
-  }
-
-  5% {
-    clip: rect(140px, 9999px, 198px, 0);
-  }
-
-  10% {
-    clip: rect(184px, 9999px, 89px, 0);
-  }
-
-  15% {
-    clip: rect(121px, 9999px, 6px, 0);
-  }
-
-  20% {
-    clip: rect(181px, 9999px, 99px, 0);
-  }
-
-  25% {
-    clip: rect(154px, 9999px, 133px, 0);
-  }
-
-  30% {
-    clip: rect(134px, 9999px, 169px, 0);
-  }
-
-  35% {
-    clip: rect(26px, 9999px, 187px, 0);
-  }
-
-  40% {
-    clip: rect(147px, 9999px, 137px, 0);
-  }
-
-  45% {
-    clip: rect(31px, 9999px, 52px, 0);
-  }
-
-  50% {
-    clip: rect(191px, 9999px, 109px, 0);
-  }
-
-  55% {
-    clip: rect(74px, 9999px, 54px, 0);
-  }
-
-  60% {
-    clip: rect(145px, 9999px, 75px, 0);
-  }
-
-  65% {
-    clip: rect(153px, 9999px, 198px, 0);
-  }
-
-  70% {
-    clip: rect(99px, 9999px, 136px, 0);
-  }
-
-  75% {
-    clip: rect(118px, 9999px, 192px, 0);
-  }
-
-  80% {
-    clip: rect(1px, 9999px, 83px, 0);
-  }
-
-  85% {
-    clip: rect(145px, 9999px, 98px, 0);
-  }
-
-  90% {
-    clip: rect(121px, 9999px, 154px, 0);
-  }
-
-  95% {
-    clip: rect(156px, 9999px, 44px, 0);
-  }
-
-  100% {
-    clip: rect(67px, 9999px, 122px, 0);
-  }
-}
 
 
 
@@ -416,6 +319,10 @@
 /* glowing text  */
 :root {
   --glow-color: #97a5ff;
+  --text-color: hsla(210, 50%, 85%, 1);
+  --shadow-color: hsla(210, 40%, 52%, .4);
+  --btn-color: hsl(210, 80%, 42%);
+  --bg-color: #141218;
 }
 
 *,
@@ -586,13 +493,6 @@
 
 /* fancy background */
 
-.fancy-bg {
-  background-image: radial-gradient(#7c7cec 1.5px, transparent 1.5px), radial-gradient(#7c7cec 1.5px, transparent 1.5px);
-  background-size: 26px 26px;
-  background-position: 0 0, 13px 13px;
-  background-color: #001836;
-}
-
 .fancy-bg2 {
   background:
     radial-gradient(50% 50% at 100% 0, #000000 0% 5%, #101629 6% 15%, #000000 16% 25%, #101629 26% 35%, #000000 36% 45%,
@@ -619,4 +519,105 @@
 /* fancy shadow  */
 .fancy-shadow {
   box-shadow: -26px 10px 44px -2px rgba(25, 0, 83, 0.46);
+}
+
+
+
+
+
+
+
+
+
+
+/* scroll down animation  */
+.scroll-down {
+  --color: white;
+  --sizeX: 30px;
+  --sizeY: 50px;
+  position: relative;
+  width: var(--sizeX);
+  height: var(--sizeY);
+  margin-left: var(sizeX / 2);
+  border: calc(var(--sizeX) / 10) solid var(--color);
+  border-radius: 50px;
+  box-sizing: border-box;
+  margin-bottom: 16px;
+}
+
+.scrolldown::before {
+  content: "";
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  width: 6px;
+  height: 6px;
+  margin-left: -3px;
+  background-color: var(--color);
+  border-radius: 100%;
+  animation: scrolldown-anim 2s infinite;
+  box-sizing: border-box;
+  box-shadow: 0px -5px 3px 1px #ffffff66;
+}
+
+@keyframes scrolldown-anim {
+  0% {
+    opacity: 0;
+    height: 6px;
+  }
+
+  40% {
+    opacity: 1;
+    height: 10px;
+  }
+
+  80% {
+    transform: translate(0, 20px);
+    height: 10px;
+    opacity: 0;
+  }
+
+  100% {
+    height: 3px;
+    opacity: 0;
+  }
+}
+
+.chevrons {
+  padding: 6px 0 0 0;
+  margin-left: -3px;
+  margin-top: 48px;
+  width: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chevrondown {
+  margin-top: -6px;
+  position: relative;
+  border: solid var(--color);
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  transform: rotate(45deg);
+}
+
+.chevrondown:nth-child(odd) {
+  animation: pulse 500ms ease infinite alternate;
+}
+
+.chevrondown:nth-child(even) {
+  animation: pulse 500ms ease infinite alternate 250ms;
+}
+
+@keyframes pulse {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 0.5;
+  }
 }
