--- a/src/App.css
+++ b/src/App.css
@@ -61,114 +61,133 @@
 /* fancy button  */
 
 .fancy-button .wow-btn {
-	position: relative;
-	top: 0;
-	left: 0;
-	width: 155px;
-	height: 40px;
-	margin: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+  position: relative;
+  top: 0;
+  left: 0;
+  width: 155px;
+  height: 40px;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
 .fancy-button .wow-btn a {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background: rgba(255, 255, 255, 0.05);
-	box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
-	border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-	border-top: 1px solid rgba(255, 255, 255, 0.1);
-	border-radius: 30px;
-	padding: 10px;
-	letter-spacing: 1px;
-	text-decoration: none;
-	overflow: hidden;
-	color: #fff;
-	font-weight: 400px;
-	z-index: 1;
-	transition: 0.5s;
-	backdrop-filter: blur(15px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(255, 255, 255, 0.05);
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 30px;
+  padding: 10px;
+  letter-spacing: 1px;
+  text-decoration: none;
+  overflow: hidden;
+  color: #fff;
+  font-weight: 400px;
+  z-index: 1;
+  transition: 0.5s;
+  backdrop-filter: blur(15px);
   font-size: 12px;
 }
+
 .fancy-button .wow-btn:hover a {
-	letter-spacing: 3px;
+  letter-spacing: 3px;
 }
+
 .fancy-button .wow-btn a::before {
-	content: "";
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 50%;
-	height: 100%;
-	background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
-	transform: skewX(45deg) translate(0);
-	transition: 0.5s;
-	filter: blur(0px);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background: linear-gradient(to left, rgba(255, 255, 255, 0.15), transparent);
+  transform: skewX(45deg) translate(0);
+  transition: 0.5s;
+  filter: blur(0px);
 }
+
 .fancy-button .wow-btn:hover a::before {
-	transform: skewX(45deg) translate(200px);
+  transform: skewX(45deg) translate(200px);
 }
+
 .fancy-button .wow-btn::before {
-	content: "";
-	position: absolute;
-	left: 50%;
-	transform: translatex(-50%);
-	bottom: -5px;
-	width: 30px;
-	height: 10px;
-	background: #97a5ff;
-	border-radius: 10px;
-	transition: 0.5s;
-	transition-delay: 0.5;
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
+  bottom: -5px;
+  width: 30px;
+  height: 10px;
+  background: #97a5ff;
+  border-radius: 10px;
+  transition: 0.5s;
+  transition-delay: 0.5;
 }
-.fancy-button .wow-btn:hover::before /*lightup button*/ {
-	bottom: 0;
-	height: 50%;
-	width: 80%;
-	border-radius: 30px;
+
+.fancy-button .wow-btn:hover::before
+
+/*lightup button*/
+  {
+  bottom: 0;
+  height: 50%;
+  width: 80%;
+  border-radius: 30px;
 }
 
 .fancy-button .wow-btn::after {
-	content: "";
-	position: absolute;
-	left: 50%;
-	transform: translatex(-50%);
-	top: -5px;
-	width: 30px;
-	height: 10px;
-	border-radius: 10px;
-	transition: 0.5s;
-	transition-delay: 0.5;
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translatex(-50%);
+  top: -5px;
+  width: 30px;
+  height: 10px;
+  border-radius: 10px;
+  transition: 0.5s;
+  transition-delay: 0.5;
 }
-.fancy-button .wow-btn:hover::after /*lightup button*/ {
-	top: 0;
-	height: 50%;
-	width: 80%;
-	border-radius: 30px;
+
+.fancy-button .wow-btn:hover::after
+
+/*lightup button*/
+  {
+  top: 0;
+  height: 50%;
+  width: 80%;
+  border-radius: 30px;
 }
-.fancy-button .wow-btn:nth-child(1)::before, /*chnage 1*/
+
+.fancy-button .wow-btn:nth-child(1)::before,
+/*chnage 1*/
 .fancy-button .wow-btn:nth-child(1)::after {
-	background: #97a5ff;
-	box-shadow: 0 0 5px #97a5ff, 0 0 15px #97a5ff, 0 0 30px #97a5ff,
-		0 0 60px #97a5ff;
+  background: #97a5ff;
+  box-shadow: 0 0 5px #97a5ff, 0 0 15px #97a5ff, 0 0 30px #97a5ff,
+    0 0 60px #97a5ff;
 }
-.fancy-button .wow-btn:nth-child(2)::before, /*chnage 1*/
+
+.fancy-button .wow-btn:nth-child(2)::before,
+/*chnage 1*/
 .fancy-button .wow-btn:nth-child(2)::after {
-	background: #97ff9e;
-	box-shadow: 0 0 5px #97ff9e, 0 0 15px #97ff9e, 0 0 30px #97ff9e,
-		0 0 60px #97ff9e;
+  background: #97ff9e;
+  box-shadow: 0 0 5px #97ff9e, 0 0 15px #97ff9e, 0 0 30px #97ff9e,
+    0 0 60px #97ff9e;
 }
-.fancy-button .wow-btn:nth-child(3)::before, /*chnage 1*/
+
+.fancy-button .wow-btn:nth-child(3)::before,
+/*chnage 1*/
 .fancy-button .wow-btn:nth-child(3)::after {
-	background: #ffbb97;
-	box-shadow: 0 0 5px #ffbb97, 0 0 15px #ffbb97, 0 0 30px #ffbb97,
-		0 0 60px #ffbb97;
+  background: #ffbb97;
+  box-shadow: 0 0 5px #ffbb97, 0 0 15px #ffbb97, 0 0 30px #ffbb97,
+    0 0 60px #ffbb97;
 }
 
 
@@ -493,6 +512,25 @@
 
 /* fancy background */
 
+.fancy-bg {
+  background: linear-gradient(45deg,#0000 calc(25%/3), #000000 0 calc(50%/3),
+  #0000 0 calc(250%/3), #000000 0 calc(275%/3),
+  #0000 0),linear-gradient( 45deg,#000000 calc(25%/3), #0000 0 calc(50%/3),
+  #000000 0 25%, #0000 0 75%,
+  #000000 0 calc(250%/3), #0000 0 calc(275%/3),
+  #000000 0),
+  linear-gradient(-45deg,#0000 calc(25%/3), #000000 0 calc(50%/3),
+  #0000 0 calc(250%/3), #000000 0 calc(275%/3),
+  #0000 0),linear-gradient(-45deg,#000000 calc(25%/3), #0000 0 calc(50%/3),
+  #000000 0 25%, #0000 0 75%,
+  #000000 0 calc(250%/3), #0000 0 calc(275%/3),
+  #000000 0)
+  #141c35;
+background-size: 30px 30px;
+background-position: 0 0, 15px  15px;
+
+}
+
 .fancy-bg2 {
   background:
     radial-gradient(50% 50% at 100% 0, #000000 0% 5%, #101629 6% 15%, #000000 16% 25%, #101629 26% 35%, #000000 36% 45%,
@@ -531,93 +569,30 @@
 
 
 /* scroll down animation  */
-.scroll-down {
-  --color: white;
-  --sizeX: 30px;
-  --sizeY: 50px;
+
+.shapedividers_com-2722 {
+  overflow: hidden;
   position: relative;
-  width: var(--sizeX);
-  height: var(--sizeY);
-  margin-left: var(sizeX / 2);
-  border: calc(var(--sizeX) / 10) solid var(--color);
-  border-radius: 50px;
-  box-sizing: border-box;
-  margin-bottom: 16px;
 }
 
-.scrolldown::before {
-  content: "";
+.shapedividers_com-2722::before {
+  content: '';
+  font-family: 'shape divider from ShapeDividers.com';
   position: absolute;
-  bottom: 30px;
-  left: 50%;
-  width: 6px;
-  height: 6px;
-  margin-left: -3px;
-  background-color: var(--color);
-  border-radius: 100%;
-  animation: scrolldown-anim 2s infinite;
-  box-sizing: border-box;
-  box-shadow: 0px -5px 3px 1px #ffffff66;
+  z-index: 3;
+  pointer-events: none;
+  background-repeat: no-repeat;
+  bottom: -0.1vw;
+  left: -0.1vw;
+  right: -0.1vw;
+  top: -0.1vw;
+  background-size: 400% 167px;
+  background-position: 51% 0%;
+  background-image: url('data:image/svg+xml;charset=utf8, <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 35.28 2.17" preserveAspectRatio="none"><path d="M0 .5c3.07.55 9.27-.42 16.14 0 6.88.4 13.75.57 19.14-.11V0H0z" fill="%2319223e"/><path d="M0 1c3.17.8 7.29-.38 10.04-.55 2.75-.17 9.25 1.47 12.67 1.3 3.43-.17 4.65-.84 7.05-.87 2.4-.02 5.52.88 5.52.88V0H0z" opacity=".5" fill="%2319223e"/><path d="M0 1.85c2.56-.83 7.68-.3 11.79-.42 4.1-.12 6.86-.61 9.58-.28 2.73.33 5.61 1.17 8.61 1 3-.19 4.73-.82 5.3-.84V.1H0z" opacity=".5" fill="%2319223e"/></svg>');
 }
 
-@keyframes scrolldown-anim {
-  0% {
-    opacity: 0;
-    height: 6px;
-  }
-
-  40% {
-    opacity: 1;
-    height: 10px;
-  }
-
-  80% {
-    transform: translate(0, 20px);
-    height: 10px;
-    opacity: 0;
-  }
-
-  100% {
-    height: 3px;
-    opacity: 0;
-  }
-}
-
-.chevrons {
-  padding: 6px 0 0 0;
-  margin-left: -3px;
-  margin-top: 48px;
-  width: 30px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.chevrondown {
-  margin-top: -6px;
-  position: relative;
-  border: solid var(--color);
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  width: 10px;
-  height: 10px;
-  transform: rotate(45deg);
-}
-
-.chevrondown:nth-child(odd) {
-  animation: pulse 500ms ease infinite alternate;
-}
-
-.chevrondown:nth-child(even) {
-  animation: pulse 500ms ease infinite alternate 250ms;
-}
-
-@keyframes pulse {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 0.5;
+@media (min-width:2100px) {
+  .shapedividers_com-2722::before {
+    background-size: 400% calc(2vw + 167px);
   }
 }
